# videoTeror

./: .gitmodules
data/: svm-biggun  templates.yml
src/: CMakeLists.txt  common.h  common.pri  faceCommon.pri  main.cpp  videoTeror.pro  vtsense.pri
src/Helpers/: anotation.cpp  anotation.h  serialization.h
src/MotionDetection/: backgroundsubtractordetector.cpp  backgroundsubtractordetector.h  farnebackmotiondetector.cpp  farnebackmotiondetector.h  gradientmotiondetector.cpp  gradientmotiondetector.h  motiondetector.cpp  motiondetector.h  opticalflowmotiondetector.cpp  opticalflowmotiondetector.h  simplemotiondetector.cpp  simplemotiondetector.h
src/ObjectDetection/: hogpeopledetector.cpp  hogpeopledetector.h  objectdetector.cpp  objectdetector.h  templatematcher.h
src/Tracking/: pyrlktracker.cpp  pyrlktracker.h  tracker.h
src/apps/: CMakeLists.txt
src/apps/bigGunDetection/: CMakeLists.txt  main.cpp
src/apps/bigGunDetectionTraining/: CMakeLists.txt  main.cpp
src/apps/demo/: CMakeLists.txt  main.cpp
src/apps/evaluateFrgc/: CMakeLists.txt  main.cpp
src/apps/faceDetection/: CMakeLists.txt  main.cpp
src/apps/faceDetectionInVideo/: CMakeLists.txt  main.cpp
src/apps/faceIdentification/: CMakeLists.txt  main.cpp
src/apps/gunDetection/: CMakeLists.txt  main.cpp
src/apps/motionDetection/: CMakeLists.txt  main.cpp
src/apps/nirFace/: CMakeLists.txt  main.cpp
src/apps/peopleDetection/: CMakeLists.txt  main.cpp
src/apps/pointTracking/: CMakeLists.txt  main.cpp
src/bigGunDetection/: bigGunDetection.pro  main.cpp
src/bigGunDetectionTraining/: bigGunDetectionTraining.pro  main.cpp
src/demo/: CMakeLists.txt  main.cpp
src/dlib/: CMakeLists.txt
src/evaluateFrgc/: evaluateFrgc.pro  main.cpp
src/faceDetection/: faceDetection.pro  main.cpp
src/faceDetectionInVideo/: faceDetectionInVideo.pro  main.cpp
src/faceIdentification/: faceIdentification.pro  main.cpp
src/gunDetection/: gunDetection.pro  main.cpp
src/motionDetection/: main.cpp  motionDetection.pro
src/nirFace/: main.cpp  nirFace.pro
src/peopleDetection/: CMakeLists.txt  main.cpp  peopleDetection.pro
src/pointTracking/: main.cpp  pointTracking.pro
src/vtsense/: CMakeLists.txt  main.cpp  vtsense.pro
src/vtsense/Helpers/: anotation.h  helpers.cpp  helpers.h  serialization.cpp  serialization.h
src/vtsense/MachineLearning/: binaryclassifier.h  classifier.h.autosave  probabilisticmodel.cpp  probabilisticmodel.h  svm.cpp  svm.h
src/vtsense/MotionDetection/: backgroundsubtractordetector.cpp  backgroundsubtractordetector.h  farnebackmotiondetector.cpp  farnebackmotiondetector.h  gradientmotiondetector.cpp  gradientmotiondetector.h  motiondetector.cpp  motiondetector.h  opticalflowmotiondetector.cpp  opticalflowmotiondetector.h  simplemotiondetector.cpp  simplemotiondetector.h
src/vtsense/ObjectDetection/: hogpeopledetector.cpp  hogpeopledetector.h  objectdetector.h  templatematcher.cpp  templatematcher.h
src/vtsense/Tracking/: pyrlktracker.cpp  tracker.cpp  tracker.h
src/vtsense/include/vtsense/: vtsense.h
src/vtsense/include/vtsense/Helpers/: anotation.h  helpers.h  serialization.h
src/vtsense/include/vtsense/MachineLearning/: binaryclassifier.h  probabilisticmodel.h  svm.h
src/vtsense/include/vtsense/MotionDetection/: backgroundsubtractordetector.h  gradientmotiondetector.h  motiondetector.h  opticalflowmotiondetector.h  simplemotiondetector.h
src/vtsense/include/vtsense/ObjectDetection/: dlibfacedetector.h  haardetector.h  hogpeopledetector.h  objectdetector.h  templatematcher.h
src/vtsense/include/vtsense/Tracking/: objecttracker.h  pointtracker.h  pyrlktracker.h  tracker.h  trajectory.h
src/vtsense/src/Helpers/: anotation.cpp  helpers.cpp  serialization.cpp
src/vtsense/src/MachineLearning/: probabilisticmodel.cpp  svm.cpp
src/vtsense/src/MotionDetection/: backgroundsubtractordetector.cpp  farnebackmotiondetector.cpp  gradientmotiondetector.cpp  motiondetector.cpp  opticalflowmotiondetector.cpp  simplemotiondetector.cpp
src/vtsense/src/ObjectDetection/: dlibfacedetector.cpp  haardetector.cpp  hogpeopledetector.cpp  objectdetector.cpp  templatematcher.cpp
src/vtsense/src/Tracking/: objecttracker.cpp  pyrlktracker.cpp  tracker.cpp
src/vtsenseExtras/: CMakeLists.txt
src/vtsenseExtras/include/vtsenseExtras/: dircrawler.h
src/vtsenseExtras/src/: dircrawler.cpp
